<resources>
    <string name="app_name">Chess</string>
    <string name="title">Welcome to Knight Rider!!</string>
    <string name="chooseBoard">Please choose a chessBoard to begin!</string>

    <string name="title_activity_board">BoardActivity</string>
    <string name="play_again">PLAY AGAIN!</string>
    <string name="loading_simple_table_data">Loading simple table data</string>
    <string name="loading_chess_table_data">Loading chess table Data</string>
    <string name="target">Target</string>
    <string name="start">Start</string>
    <string-array name="boardSizeArray">
        <item>Choose chess board</item>
        <item>6 x 6</item>
        <item>7 x 7</item>
        <item>8 x 8 </item>
        <item>9 x 9</item>
        <item>10 x 10</item>
        <item>11 x 11</item>
        <item>12 x 12</item>
        <item>13 x 13</item>
        <item>14 x 14</item>
        <item>15 x 15</item>
        <item>16 x 16</item>


    </string-array>
</resources>
